[tool.poetry]
name = "aeroscope"
version = "0.2.5-beta" # This is directly modified by the poetry dynamic versioning
description = "AeroSCOPE: Exploring Aviation Flows"
readme = "README.md"
authors = [
    "Antoine SALGAS <antoine.salgas@isae-supaero.fr>",
    "Junzi SUN <j.sun-1@tudelft.nl>",
    "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
    "Thomas PLANES <thomas.planes@isae-supaero.fr>",
]
keywords = [
    "air transport",
    "flight data",
    "fligh emissions",
]
license = "GPL-3.0-only"
homepage = "https://github.com/AeroMAPS/AeroSCOPE"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
numpy = "^1.23"
pandas = "^1.5"
ipython = "^8.8.0"
plotly = "^5.16.1"
ipywidgets = "^8.1.1"
matplotlib = "^3.6.2"
ipyvuetify = "^1.8.10"
jupyterlab = "^3.6.1"
voila =  "^0.4.0"
voila-vuetify = "0.6.0"
docutils = "^0.17.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = { version = "^7.0", extras = ["toml"] }
nbval = "^0.11"
wrapt = "^1.16.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^4.1.2"
sphinx-rtd-theme = "^1.0"
sphinxcontrib-bibtex = "^2.3.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.5.0"
nbstripout = "^0.6.0"
ruff = "0.5.4"

[tool.poetry.scripts]
    aeroscope = "aeroscope.app:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"